force-app/main/default/objects/Actions__c/fields/Action_Text__c.field-meta.xml
<CustomField>
    <fullName>Action_Text__c</fullName>
    <label>Action Text</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>