force-app/main/default/objects/Actions__c/fields/Image_Carousel_Config__c.field-meta.xml
<CustomField>
    <fullName>Image_Carousel_Config__c</fullName>
    <label>Image Carousel Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>