force-app/main/default/objects/Actions__c/fields/Popover_Text__c.field-meta.xml
<CustomField>
    <fullName>Popover_Text__c</fullName>
    <label>Popover Text</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>