force-app/main/default/objects/Actions__c/fields/Record_Update_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Record_Update_Criteria__c</fullName>
    <label>Record Update Criteria</label>
    <type>TextArea</type>
</CustomField>