force-app/main/default/objects/Actions__c/fields/Recurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Date__c</fullName>
    <label>Recurrence Date</label>
    <type>Date</type>
</CustomField>