force-app/main/default/objects/Actions__c/fields/Recurrence_Days__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Days__c</fullName>
    <label>Recurrence Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>