force-app/main/default/objects/Actions__c/fields/Subtab_Name__c.field-meta.xml
<CustomField>
    <fullName>Subtab_Name__c</fullName>
    <label>Subtab Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>