force-app/main/default/objects/Actions__c/fields/Welcome_Mat_Background_Image__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Mat_Background_Image__c</fullName>
    <label>Welcome Mat Background Image</label>
    <type>Url</type>
</CustomField>