force-app/main/default/objects/Actions__c/fields/Welcome_Mat_Body__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Mat_Body__c</fullName>
    <label>Welcome Mat Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>