force-app/main/default/objects/Actions__c/recordTypes/Flow.recordType-meta.xml
<RecordType>
    <fullName>Flow</fullName>
    <active>true</active>
    <label>Flow</label>
</RecordType>