force-app/main/default/objects/Actions__c/recordTypes/Image_Carousel.recordType-meta.xml
<RecordType>
    <fullName>Image_Carousel</fullName>
    <active>true</active>
    <label>Image Carousel</label>
</RecordType>