force-app/main/default/objects/Actions__c/recordTypes/Object_Quick_Action.recordType-meta.xml
<RecordType>
    <fullName>Object_Quick_Action</fullName>
    <active>true</active>
    <label>Object Quick Action</label>
</RecordType>