force-app/main/default/objects/Actions__c/recordTypes/Popover.recordType-meta.xml
<RecordType>
    <fullName>Popover</fullName>
    <active>true</active>
    <label>Popover</label>
</RecordType>