force-app/main/default/objects/Actions__c/recordTypes/Rich_Text.recordType-meta.xml
<RecordType>
    <fullName>Rich_Text</fullName>
    <active>true</active>
    <label>Rich Text</label>
</RecordType>