force-app/main/default/objects/Actions__c/recordTypes/Toaster_Alert.recordType-meta.xml
<RecordType>
    <fullName>Toaster_Alert</fullName>
    <active>true</active>
    <label>Toaster Alert</label>
</RecordType>