force-app/main/default/objects/Actions__c/recordTypes/Welcome_Mat.recordType-meta.xml
<RecordType>
    <fullName>Welcome_Mat</fullName>
    <active>true</active>
    <label>Welcome Mat</label>
</RecordType>